objects/Customer_POC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Customer POC Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POC-{0000}</displayFormat>
        <label>Customer POC Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer POC Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>